test_suite5/ALAN/test_suite/alan-2022-examples/failing/009140_mutation.alan
source t function Isx5(to k) begin relax end begin relax end
